fixed layout issue with scrollbar appearing at the bottom

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -29,11 +29,12 @@ body {
     left: 480px;
     position: relative;
     top: -40px;
+    width:200px;
 }
 #menu table{
     margin: 20px 0 0 5px;
     top: 200px;
-    width:100%;
+    width:98%;
     font-size:24px;
     position: relative;
 }
